--- a/page1.html
+++ b/page1.html
@@ -106,8 +106,8 @@
             <div class="contact">
                 <p>Tel: 123-555-1212</p>
                 <p>Fax: 123-555-1213</p>
-                <p>info@mainevents</p>
-                <p>.com</p>
+                <p>info@mainevents.c</p>
+                <p>om</p>
             </div>
         </div>
         <div class="vertical-line2"></div>
