--- a/page1.html
+++ b/page1.html
@@ -13,11 +13,11 @@
     <nav>
         <ul>
             <li class="nav-item1"><a>MAIN EVENTS</a></li>
-            <li class="nav-item2"><a href="page2.html#home">Home</a></li>
-            <li class="nav-item3"><a href="page2.html#services">Services</a></li>
-            <li class="nav-item4"><a href="page2.html#about">About</a></li>
-            <li class="nav-item5"><a href="page2.html#gallery">Gallery</a></li>
-            <li class="nav-item6"><a href="page2.html#contact">Contact</a></li>
+            <li class="nav-item2"><a href="page2.html#home" target="_blank">Home</a></li>
+            <li class="nav-item3"><a href="page2.html#services" target="_blank">Services</a></li>
+            <li class="nav-item4"><a href="page2.html#about" target="_blank">About</a></li>
+            <li class="nav-item5"><a href="page2.html#gallery" target="_blank">Gallery</a></li>
+            <li class="nav-item6"><a href="page2.html#contact" target="_blank">Contact</a></li>
         </ul>
     </nav>
 
